--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "cuid": "^1.3.8",
+    "fsevents": "^2.1.3",
     "jquery": "^3.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "superagent": "^5.1.3"
   },
   "scripts": {
